updated orange color, fixed playlist iframe issue on mobile and ipad

--- a/src/components/Home/Playlists/Playlists.scss
+++ b/src/components/Home/Playlists/Playlists.scss
@@ -5,10 +5,11 @@
     min-height: 175px;
     position: absolute;
     top: 0;
+    z-index: 2;
   }
 
   h4 {
-    color: #EC7263;
+    color: #DE7C79;
     text-transform: uppercase;
   }
 
