--- a/src/components/Home/Resume/Experience/Experience.scss
+++ b/src/components/Home/Resume/Experience/Experience.scss
@@ -12,7 +12,7 @@
     }
 
     .MuiStepIcon-root {
-      color: #EC7263;
+      color: #DE7C79;
       margin-top: -20px;
     }
 
