--- a/src/components/Home/Resume/Resume.scss
+++ b/src/components/Home/Resume/Resume.scss
@@ -14,7 +14,7 @@
     }
 
     .MuiStepIcon-root {
-      color: #ec7263;
+      color: #DE7C79;
       margin-top: -20px;
     }
 
@@ -60,7 +60,7 @@
   }
 
   h6 {
-    color: #ec7263;
+    color: #DE7C79;
     text-transform: uppercase;
   }
 
